--- a/tests.html
+++ b/tests.html
@@ -2,6 +2,7 @@
   <head>
     <script src="note-model.js"></script>
     <script src="note-list-model.js"></script>
+    <script src="note-list-view.js"></script>
     <script src="assert.js"></script>
     <script src="note-model-tests.js"></script>
 
