--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Note List</title>
+    <script src="note-controller.js"></script>
 
   </head>
   <body>
