--- a/specRunner.html
+++ b/specRunner.html
@@ -6,10 +6,12 @@
   <script src="spec/noteListModelSpec.js"></script>
   <script src="models/noteListView.js"></script>
   <script src="spec/noteListViewSpec.js"></script>
-  <script src="controllers/note-controller.js"></script>
-  <script src="spec/noteControllerSpec.js"></script>
+
 </head>
 
 <body>
+    <div id ="app">Hello</div>
+    <script src="controllers/note-controller.js"></script>
+    <script src="spec/noteControllerSpec.js"></script>
 </body>
 </hmtl>
