--- a/specRunner.html
+++ b/specRunner.html
@@ -6,7 +6,8 @@
   <script src="spec/noteListModelSpec.js"></script>
   <script src="models/noteListView.js"></script>
   <script src="spec/noteListViewSpec.js"></script>
-
+  <script src="models/singleNoteView.js"></script>
+  <script src="spec/singleNoteViewSpec.js"></script>
 </head>
 
 <body>
