implemente a single note page without tests

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <script src="models/noteListModel.js"></script>
   <script src="models/noteListView.js"></script>
   <script src="controllers/note-controller.js"></script>
+  <script src="models/singleNoteView.js"></script>
 
 </head>
 
 <body>
 
-  <div id ="app">Hello</div>
+  <div id ="app"></div>
+  <div id ="note"></div>
   <script src="index.js"></script>
 </body>
 </hmtl>
