tested showing single note page

--- a/specRunner.html
+++ b/specRunner.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id ="app">Hello</div>
+    <div id ="note"></div>
     <script src="controllers/note-controller.js"></script>
     <script src="spec/noteControllerSpec.js"></script>
 </body>
