Added form for new note

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-  <form>
+  <form action="/notes" method="post">
+    <textarea id="text" rows="4" cols="50">
+    </textarea>
+    <input type="submit" value="Create Note">
   </form>
   <div id ="app"></div>
   <div id ="note"></div>
