add function to prevent clickevent

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <form action="/notes" method="post">
+  <form action="/notes" method="post" id="create-note">
     <textarea id="text" rows="4" cols="50">
     </textarea>
     <input type="submit" value="Create Note">
