adds form for new note

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+	<textarea form="text" name="newnote"></textarea>
+	<form id="text"  action="#notes/new" method="post">
+		<input type="submit" value="Create">
+	</form>
 	<div id="app">Hello</div>
 	<script src="index.js"></script>
 </body>
