--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <form action="/notes" method="post" id="create-note">
     <textarea id="text" rows="4" cols="50">
     </textarea>
-    <input type="submit" value="Create Note">
+    <input id="submit-button" type="submit" value="Create Note">
   </form>
   <div id ="app"></div>
   <div id ="note"></div>
