Function added that prevents form submission and page refresh

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<textarea form="text" name="newnote"></textarea>
 	<form id="text"  action="#notes/new" method="post">
-		<input type="submit" value="Create">
+		<input type="submit" value="Create" id="submitbutton">
 	</form>
 	<div id="app">Hello</div>
 	<script src="index.js"></script>
