Fixed the test for creating notes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
   <form action="/notes" method="post" id="create-note">
-    <textarea id="text" rows="4" cols="50">
-    </textarea>
+    <textarea id="text" rows="4" cols="50"></textarea>
     <input id="submit-button" type="submit" value="Create Note">
   </form>
   <div id ="app"></div>
