--- a/specRunner.html
+++ b/specRunner.html
@@ -6,19 +6,20 @@
   <script src="spec/noteListModelSpec.js"></script>
   <script src="models/noteListView.js"></script>
   <script src="spec/noteListViewSpec.js"></script>
+  <script src="controllers/note-controller.js"></script>
+  <script src="spec/noteControllerSpec.js"></script>
   <script src="models/singleNoteView.js"></script>
   <script src="spec/singleNoteViewSpec.js"></script>
 </head>
 
 <body>
-  <form id="create-note">
-    <textarea id="text" rows="4" cols="50">
-    </textarea>
-    <input id="submit-button" type="button" value="Create Note">
+  <form action="/notes" method="post" id="create-note">
+    <textarea id="text" rows="4" cols="50"></textarea>
+    <input id="submit-button" type="submit" value="Create Note">
   </form>
     <div id ="app"></div>
     <div id ="note"></div>
-    <script src="controllers/note-controller.js"></script>
-    <script src="spec/noteControllerSpec.js"></script>
+
+    <script src="index.js"></script>
 </body>
 </hmtl>
