Spike to extract note text from a form

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-	<textarea form="text" name="newnote"></textarea>
 	<form id="text"  action="#notes/new" method="post">
+		<textarea  id="textarea" name="newnote"></textarea><br>
 		<input type="submit" value="Create" id="submitbutton">
 	</form>
 	<div id="app">Hello</div>
