finish support for user note creation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="src/models/note-model.js"></script>
 	<script src="src/models/note-list-model.js"></script>
 	<script src="src/views/note-list-view.js"></script>
-		<script src="src/views/single-note-view.js"></script>
+	<script src="src/views/single-note-view.js"></script>
 	<script src="src/controllers/note-controller.js"></script>
 </head>
 
@@ -15,7 +15,7 @@
 		<textarea  id="textarea" name="newnote"></textarea><br>
 		<input type="submit" value="Create" id="submitbutton">
 	</form>
-	<div id="app">Hello</div>
+	<div id="app"></div>
 	<script src="index.js"></script>
 </body>
 
