--- a/specRunner.html
+++ b/specRunner.html
@@ -21,7 +21,12 @@
 
 </head>
 <body>
+  <form id="text"  action="#notes/new" method="post">
+		<textarea  id="textarea" name="newnote"></textarea><br>
+		<input type="submit" value="Create" id="submitbutton">
+	</form>
+	<div id="app">Hello</div>
   <!-- This Spec prefers this Spot :P -->
-<script src="spec/note-controller-spec.js"></script>
+  <script src="spec/note-controller-spec.js"></script>
 </body>
 </html>
